tests/compile_fail/edge_tag_escape_scope.stderr
error: lifetime may not live long enough
  --> tests/compile_fail/edge_tag_escape_scope.rs:11:9
   |
 7 |     let escaped_edge = graph.scope_mut(|mut ctx| {
   |                                         -------- return type of closure is EdgeTag<'2, EdgeIx>
   |                                         |
   |                                         has type `gotgraph::graph::Context<'1, &mut gotgraph::vec_graph::VecGraph<i32, &str>>`
...
11 |         edge // ERROR: edge tag cannot escape the scope
   |         ^^^^ returning this value requires that `'1` must outlive `'2`
   |
   = note: requirement occurs because of the type `EdgeTag<'_, EdgeIx>`, which makes the generic argument `'_` invariant
   = note: the struct `EdgeTag<'scope, I>` is invariant over the parameter `'scope`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
